# VidSmith

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AI_IMPLEMENTATION_RULES.md  AI_ONBOARDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MEDIAFORGE_ARCHITECTURE.md  MEDIAFORGE_BUG_TRACKER.md  MEDIAFORGE_DECISIONS.md  MEDIAFORGE_KNOWN_LIMITATIONS.md  MEDIAFORGE_MASTER_CONTEXT.md  MEDIAFORGE_RELEASE_CHECKLIST.md  MEDIAFORGE_ROADMAP.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SUPPORT.md  VIDSMITH_BUG_TRACKER.md  VIDSMITH_COMMAND_REFERENCE.md  VIDSMITH_KNOWN_LIMITATIONS.md  VIDSMITH_ROADMAP.md  VIDSMITH_TEST_CASES.md  pyproject.toml  reproduce.py  test_subtitles.py  test_transcript.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: QA_CHECKLIST.md  RELEASE_CHECKLIST.md  WINDOWS_COMPATIBILITY.md
scripts/: generate_regression_dataset.py
src/mediaforge/: __init__.py  main.py
src/mediaforge/cli/: app.py  doctor.py  executor.py  menus.py  output.py
src/mediaforge/cli/summary/: __init__.py  builder.py  model.py  renderer.py
src/mediaforge/cli/wizard/: __init__.py  base.py  chrome.py  dispatcher.py  registry.py
src/mediaforge/cli/wizard/steps/: __init__.py  _base.py  choice.py  confirm.py  multi_select.py  numeric.py  text_input.py  toggle.py
src/mediaforge/cli/wizard/wizards/: __init__.py  audio.py  playlist.py  settings.py  subtitles.py  transcript.py  video.py
src/mediaforge/config/: __init__.py
src/mediaforge/downloader/: __init__.py  cleanup.py  engine.py  job.py  manager.py  progress.py  queue.py  validator.py
src/mediaforge/downloader/validators/: __init__.py  audio.py  context.py  file.py  metadata.py  models.py  subtitle.py  thumbnail.py
src/mediaforge/metadata/: analyzer.py
src/mediaforge/models/: __init__.py  media.py
src/mediaforge/playlist/: __init__.py  batch.py  engine.py  exceptions.py  models.py  queue.py
src/mediaforge/processing/: __init__.py  exceptions.py  ffmpeg.py  models.py  processor.py
src/mediaforge/providers/: __init__.py  base.py  metadata.py  youtube.py
src/mediaforge/settings/: __init__.py  store.py
src/mediaforge/subtitle/: __init__.py
src/mediaforge/transcript/: __init__.py  cleaner.py  engine.py  exceptions.py  json_export.py  markdown.py  models.py  parser.py  text.py
src/mediaforge/utils/: console.py  environment.py  exceptions.py  logging.py  validators.py
src/vidsmith/: __init__.py  main.py
src/vidsmith/cli/: app.py  doctor.py  executor.py  menus.py  output.py
src/vidsmith/cli/summary/: __init__.py  builder.py  model.py  renderer.py
src/vidsmith/cli/wizard/: __init__.py  base.py  chrome.py  dispatcher.py  registry.py
src/vidsmith/cli/wizard/steps/: __init__.py  _base.py  choice.py  confirm.py  multi_select.py  numeric.py  text_input.py  toggle.py
src/vidsmith/cli/wizard/wizards/: __init__.py  audio.py  playlist.py  settings.py  subtitles.py  transcript.py  video.py
src/vidsmith/config/: __init__.py
src/vidsmith/downloader/: __init__.py  cleanup.py  engine.py  manager.py  queue.py  validator.py
src/vidsmith/downloader/validators/: __init__.py  audio.py  context.py  file.py  metadata.py  subtitle.py  thumbnail.py
src/vidsmith/metadata/: analyzer.py
src/vidsmith/playlist/: __init__.py  batch.py  engine.py  exceptions.py  models.py  queue.py
src/vidsmith/processing/: __init__.py  exceptions.py  ffmpeg.py  processor.py
src/vidsmith/providers/: __init__.py  base.py  capabilities.py  metadata.py  results.py  youtube.py
src/vidsmith/settings/: __init__.py  store.py
src/vidsmith/subtitle/: __init__.py
src/vidsmith/transcript/: __init__.py  cleaner.py  engine.py  exceptions.py  json_export.py  markdown.py  parser.py  text.py
src/vidsmith/utils/: environment.py  exceptions.py  logging.py
tests/: conftest.py
tests/e2e/: test_cleanup_e2e.py
tests/unit/: test_cleanup.py  test_environment.py  test_playlist_fixes.py  test_settings_consumption.py  test_settings_store.py  test_srs_features.py  test_subtitle_ids.py  test_thumbnail_cleanup.py  test_transcript.py  test_validation_integration.py  test_validator.py  test_validator_routing.py  test_youtube_provider.py
